[package]

name = "piston2d-opengl_graphics"
version = "0.83.0"
edition = "2018"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "gmorenz",
    "leonkunert <info@leonkunert.de>",
    "mitchmindtree <me@michellnordine.com>",
    "Christiandh",
    "Apointos",
    "ccgn",
    "reem",
    "TyOverby <ty@pre-alpha.com>"
]
keywords = ["opengl", "graphics", "2d", "piston"]
description = "An OpenGL 2D back-end for the Piston game engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/opengl_graphics.git"
homepage = "https://github.com/PistonDevelopers/opengl_graphics"
documentation = "https://docs.rs/piston2d-opengl_graphics"
exclude = ["assets/*", "Cargo.png"]

[lib]
name = "opengl_graphics"
path = "src/lib.rs"

[features]
default = ["glow"]
webgl = []
glow = ["glow_wrap"]

[dependencies]
image = "0.24.1"

piston-shaders_graphics2d = "0.4.0"
piston-texture = "0.9.0"
piston-viewport = "1.0.0"
shader_version = "0.7.0"
fnv = "1.0.2"

glow_wrap = { path = "glow_wrap" ,optional = true}
gl = { version =  "0.13.0",optional = true}


[dependencies.piston2d-graphics]
version = "0.44.0"
features = ["glyph_cache_rusttype"]

[dev-dependencies]
piston = {version = "0.55.0", features = ["async"]}
pistoncore-sdl2_window = "0.69.0"
rand = "0.6.0"
tokio = {version = "1.34.0", features = ["full"]}
futures = "0.3.29"

[target.'cfg(not(any(target_arch = "wasm32")))'.dev-dependencies]
glutin = { version = "0.28" }
glow = "0.12.0"

[build-dependencies]
khronos_api = "2.1.0"
