[package]

name = "piston2d-opengl_graphics"
version = "0.86.0"
edition = "2018"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "gmorenz",
    "leonkunert <info@leonkunert.de>",
    "mitchmindtree <me@michellnordine.com>",
    "Christiandh",
    "Apointos",
    "ccgn",
    "reem",
    "TyOverby <ty@pre-alpha.com>"
]
keywords = ["opengl", "graphics", "2d", "piston"]
description = "An OpenGL 2D back-end for the Piston game engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/opengl_graphics.git"
homepage = "https://github.com/PistonDevelopers/opengl_graphics"
documentation = "https://docs.rs/piston2d-opengl_graphics"
exclude = ["assets/*", "Cargo.png"]

[lib]
name = "opengl_graphics"
path = "src/lib.rs"

[features]
default = ["gl"]
webgl = ["gl"]
glow = ["piston2d-glow_wrap"]

[dependencies]
image = "0.25.2"

piston-shaders_graphics2d = "0.4.0"
piston-texture = "0.9.0"
piston-viewport = "1.0.2"
shader_version = "0.7.0"
fnv = "1.0.7"

piston2d-glow_wrap = { path = "glow_wrap", version = "0.1.0", optional = true}
gl = { version = "0.14.0", optional = true}


[dependencies.piston2d-graphics]
version = "0.45.0"
features = ["glyph_cache_rusttype"]

[target.'cfg(not(any(target_arch = "wasm32")))'.dev-dependencies]
piston = {version = "1.0.0", features = ["async"]}
pistoncore-sdl2_window = "0.70.0"
rand = "0.8.5"
tokio = {version = "1.40.0", features = ["full"]}
futures = "0.3.31"
glutin = "0.32.1"
glow = "0.14.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
glow = "0.14.2"
web-sys = { version = "0.3.72", features = [
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "Window",
] }
wasm-bindgen = { version = "0.2.95" }

[build-dependencies]
khronos_api = "3.1.0"
