[package]
name = "piston2d-glow_wrap"
version = "0.2.0"
edition = "2021"
description = "Glow wrapping code for Piston OpenGL backend"
license = "MIT"
keywords = ["glow", "graphics", "2d", "piston"]
repository = "https://github.com/PistonDevelopers/opengl_graphics.git"
homepage = "https://github.com/PistonDevelopers/opengl_graphics"
documentation = "https://docs.rs/piston2d-glow_wrap"

[lib]
name = "glow_wrap"

[dependencies]
glow = "0.16.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
slotmap = "1.0.7"
web_sys = { version = "~0.3.60", package = "web-sys", features = [
  "WebGlUniformLocation",
] }
